simple/test/features/errors/semantic/e1061_empty_enum.spl
# E1061: Empty Enum

Feature: E1061 - Enum Must Have At Least One Variant
  As a Simple compiler
  I want to detect empty enums
  So that enums always have at least one variant

  Background:
    Given I have the Simple compiler

  Scenario: Empty enum definition
    When I compile:
      '''
      enum Empty:
        # Error: no variants
      '''
    Then I should see error E1061 at line 1
    And the error message should be "enum must have at least one variant"
    And the label should indicate "empty enum"
    And the help should suggest "add at least one variant to the enum"

  Scenario: Valid enum
    When I compile:
      '''
      enum Option<T>:
        Some(T)
        None
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      enum Empty:
      '''
    Then I should see error E1061
    And the error message should contain "빈 열거형"
